2011-08-24  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language): danish locale is "da_DK"
	Reported by Bruno Haible

2011-08-23  Sam Steingold  <sds@gnu.org>

	* win32.d (WSAEAGAIN, WSAENOENT): remove unused defines
	(ioctl): do not define to ioctlsocket because gnulib defines it to
	rpl_ioctl which calls ioctlsocket

2011-08-23  Sam Steingold  <sds@gnu.org>

	revert most of the 2011-08-17 patch
	* win32.d: include <ddk/ntifs.h> for NtQueryInformationFile
	because that's what works with i686-pc-mingw32-gcc and is
	recommended by http://msdn.microsoft.com/en-us/library/ff567052.aspx;
	do not include ntstatus.h because it is included by winddk/ntddk
	which is included by ntifs
	* configure.in: do not test for windows headers

2011-08-19  Sam Steingold  <sds@gnu.org>

	Implement RFE#3384688: use OS facilities to print os-error
	* condition.lisp (try-coerce-to-condition): special handling of
	NIL datum for the sake of OS-ERROR & its subclasses
	(os-error): add $CODE slot and :REPORT option
	(os-error-win32, os-stream-error, os-file-error): new conditions,
	subclasses of OS-ERROR
	(simple-os-error): remove
	(%defclcs): remove OS-ERROR -> SIMPLE-OS-ERROR map
	* lispbibl.d (cint_white_p): do not export
	(condition_t): remove os_error
	(OS_file_error): signal OS-FILE-ERROR, not SIMPLE-FILE-ERROR
	* constsym.d (simple_os_error): remove
	(os_error, os_file_error, os_stream_error, strerror): add
	(os_error_win32, format_message) [WIN32|CYGWIN]: add
	* subr.d (strerror): add
	(format_message) [WIN32|CYGWIN]: add
	* error.d (end_error): for os_stream_error, os_file_error,
	os_error, os_error_win32: reset errstring (known as datum to
	COERCE-TO-CONDITION, see above) to NIL; complete :CODE
	(error_code_converter_t, convert_error_code): add
	(OS_filestream_error): signal OS-ERRORs, not SIMPLE-ERRORs
	* errunix.d (os_error_t, get_errormsg): remove
	(STRERROR): preliminary implementation: required numeric argument